--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <iframe
-            src="https://drive.google.com/file/d/11X1A5sBQCVZrAXYFj6TODTeBTPbwdRLz/view?usp=sharing"
+            src="https://github.com/pehringer/resume/raw/main/pehringer_resume.pdf"
             width="100%"
             height="1080"
             allow="autoplay"
