--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <iframe
-            src="https://github.com/pehringer/resume/raw/main/pehringer_resume.pdf"
+            src="https://raw.githubusercontent.com/pehringer/resume/main/pehringer_resume.pdf"
             width="100%"
             height="1080"
             allow="autoplay"
