--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <iframe
-            src="https://raw.githubusercontent.com/pehringer/resume/main/pehringer_resume.pdf"
+            src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/pehringer/resume/main/pehringer_resume.pdf&embedded=true"
             width="100%"
             height="1080"
             allow="autoplay"
