--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Resume</title>
-    </head>
-    <body>
-        <iframe
-            src="https://raw.githubusercontent.com/pehringer/resume/main/pehringer_resume.pdf"
-            width="100%"
-            height="1080"
-            allow="autoplay"
-        ></iframe>
-    </body>
+<html lang="en" style="width:100%; height:100%;">
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <title>kekayan's Resume</title>
+</head>
+  <body style="width:100%; height:100%; margin:0;">
+    <iframe src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/pehringer/resume/main/pehringer_resume.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+  </body>
 </html>
