--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" style="width:100%; height:100%;">
+<html>
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>kekayan's Resume</title>
+  <title>My Resume</title>
 </head>
-  <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/pehringer/resume/main/pehringer_resume.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
-  </body>
+<body>
+  <h1>My Resume</h1>
+  <embed src="https://raw.githubusercontent.com/pehringer/resume/main/pehringer_resume.pdf" type="application/pdf" width="100%" height="600px" />
+</body>
 </html>
